@@ -962,7 +962,11 @@ cbpBinTrashRollingPinkEmpty,blocks,block,,,Rolling Trash Bin Empty,,
 cbpBinTrashRollingRandomHelper,blocks,block,,,Rolling Trash Bin Random Helper,,
 cbpPoleSquareTipCentered,shapes,Block,,,Pole Tip Centered,,
 cbpBookShelfDubTopFull01_Poof,shapes,Block,,,Bookcase,,
-cbpBookShelfDubBotFull01_Poof,shapes,Block,,,Bookcase,,
+cbpBookShelfDubBotFull01_Poof,shapes,Block,,,Bookcase,, 
+cbpBookShelfSingleBottomPoof,shapes,Block,,,Bookcase,,
+cbpBookShelfSingleTopPoof,shapes,Block,,,Bookcase,,
+cbpBookcasePoof,shapes,Block,,,Bookcase,,
+cbpBookcaseCornerPoof,shapes,Block,,,Bookcase,,
 cbpBowlingBall_Corner,shapes,Block,,,Bowling Ball corner,,
 cbpBillboard,blocks,block,,,Billboard Strong,,
 cbpMetalPipeStraight_explode,shapes,Block,,,Metal Pipe Straight Explode,,
@@ -1063,5 +1067,8 @@ cbpHeadshotOnly,blocks,Block,,,Headshot Only Buffed Block
 cbpDistort,blocks,Block,,,Distort Buffed Block
 cbpTrippy,blocks,Block,,,Trippy Buffed Block
 cbpBlur,blocks,Block,,,Blur Buffed Block
+cbpCandelabraLightOffset,blocks,Block,,,Candelabra Light Offset
+cbpCandelabraLightSmallOffset,blocks,Block,,,Candelabra Light Small Offset
+cbpConcreteNukeCube,blocks,Block,,,Concrete Nuke Cube
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
