@@ -1,5 +1,10 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0042 :
+* Fixed dance game event.
+* Removed spawns for jump scare game event.
+* Bookcase lootcontainer fix for hidden doors.
+
 A21.2.001.0041 :
 * Added climbable chain.
 * Removed random rotations from deco book piles.
